# rs-quotesdirect

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
examples/: Cargo.toml  README.md  ffs-client.yaml  sds-client.yaml
examples/src/: config.rs  lib.rs  network.rs
examples/src/client/: connection.rs  feeds.rs  mod.rs
rs-quotesdirectlib/: Cargo.toml  README.md  templates.xml
rs-quotesdirectlib/src/: fast.rs  fix.rs  lib.rs  packets.rs
rs-quotesdirectlib/src/sync/: mod.rs  packets.rs
