[package]
name = "examples"
version = "1.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
bytes = "1.10"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
fastlib = { version = "0.3" }
humantime = "2.2"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
socket2 = "0.6"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

quotesdirectlib = { path = "../rs-quotesdirectlib", features = ["tokio"] }
